--- a/index.html
+++ b/index.html
@@ -376,6 +376,37 @@
 				font-size: 1.2rem;
 			}
 		}
+		
+		/* CTA Button Responsive Text */
+		.cta-btn-text-mobile {
+			display: none;
+		}
+		
+		.cta-btn-text-full {
+			display: inline;
+		}
+		
+		@media (max-width: 768px) {
+			.cta-whatsapp-btn {
+				font-size: 1rem !important;
+				padding: 12px 25px !important;
+			}
+			
+			.cta-btn-text-full {
+				display: none;
+			}
+			
+			.cta-btn-text-mobile {
+				display: inline;
+			}
+		}
+		
+		@media (max-width: 480px) {
+			.cta-whatsapp-btn {
+				font-size: 0.9rem !important;
+				padding: 10px 20px !important;
+			}
+		}
 	</style>
 
 </head>
@@ -549,17 +580,6 @@
 								</div>
 							</div>
 						</div>
-					</div>
-				</div>
-
-				<!-- Explore Our Creations Section -->
-				<div class="section py-5" style="background: linear-gradient(135deg, #7CB342 0%, #8BC34A 100%);">
-					<div class="container clearfix text-center">
-						<h2 class="nott font-weight-semibold mb-4 text-white" data-translate="cta.title">Explore Our Creations</h2>
-						<p class="text-white mb-4" style="font-size: 1.1rem;" data-translate="cta.description">Ready to experience the finest tropical fusion desserts Malaysia has to offer?</p>
-						<a href="https://wa.me/60122739293" target="_blank" class="button button-rounded button-xlarge" style="font-size: 1.2rem; padding: 15px 40px; background-color: #F4D03F; border-color: #F4D03F; color: #333; font-weight: 600;">
-							<i class="fab fa-whatsapp"></i> <span data-translate="cta.button">Contact Us on WhatsApp</span>
-						</a>
 					</div>
 				</div>
 			</div>
