--- a/contact.html
+++ b/contact.html
@@ -337,11 +337,11 @@
 								<li class="menu-item"><a class="menu-link" href="index.html">
 										<div data-translate="nav.home">Home</div>
 									</a></li>
+								<li class="menu-item"><a class="menu-link" href="products.html">
+										<div data-translate="nav.products">Products</div>
+									</a></li>
 								<li class="menu-item"><a class="menu-link" href="about.html">
 										<div data-translate="nav.about">About Us</div>
-									</a></li>
-								<li class="menu-item"><a class="menu-link" href="products.html">
-										<div data-translate="nav.products">Premium Products</div>
 									</a></li>
 								<li class="menu-item current"><a class="menu-link" href="contact.html">
 										<div data-translate="nav.contact">Contact Us</div>
@@ -377,8 +377,8 @@
 							</div>
 							<p><strong data-translate="contact.website">Website:</strong> <a href="https://3adurian.com" target="_blank" style="color: #F4D03F">3adurian.com</a></p>
 							<p><strong data-translate="contact.email">Email:</strong> <a href="mailto:3adurian2025@gmail.com" style="color: #F4D03F">3adurian2025@gmail.com</a></p>
-							<p><strong data-translate="contact.phone">Phone:</strong> <a href="tel:+60122739293" style="color: #7CB342">+6012 273 9293</a></p>
-							<p><strong>WhatsApp:</strong> <a href="https://wa.me/60122739293" target="_blank" style="color: #7CB342">+6012 273 9293</a></p>
+							<p><strong data-translate="contact.phone">Phone:</strong> <a href="tel:+60197344930" style="color: #7CB342">+6019 734 4930</a></p>
+							<p><strong>WhatsApp:</strong> <a href="https://wa.me/60197344930" target="_blank" style="color: #7CB342">+6019 734 4930</a></p>
 							<p class="mt-4"><strong data-translate="contact.location">Location:</strong><br>Spx Bercham Hub</p>
 						</div>
 						<div class="col-md-5">
@@ -405,7 +405,7 @@
 
 					<div class="row justify-content-center">
 						<div class="col-12 col-lg-8 text-center">
-							<p class="mb-2 text-white" data-translate="footer.rights">© 2025 3Adurian. All Rights Reserved.</p>
+							<p class="mb-2 text-white" data-translate="footer.rights">© 2026 3Adurian. All Rights Reserved.</p>
 							<p class="mb-2 text-white"><span data-translate="footer.website">Website</span>: <a href="https://3adurian.com" target="_blank" style="color: yellow;">3adurian.com</a> | <span data-translate="footer.email">Email</span>: <a href="mailto:3adurian2025@gmail.com" style="color: yellow;">3adurian2025@gmail.com</a></p>
 						</div>
 					</div>
@@ -420,7 +420,7 @@
 
 	<!-- Floating Contact Bubbles -->
 	<div class="floating-contacts">
-		<a href="https://wa.me/60122739293" target="_blank" class="contact-bubble whatsapp-bubble">
+		<a href="https://wa.me/60197344930" target="_blank" class="contact-bubble whatsapp-bubble">
 			<i class="fab fa-whatsapp"></i>
 			<div class="tooltip" data-translate="contact.whatsapp">Chat on WhatsApp</div>
 		</a>
