Refactor header logo section across multiple pages, update page titles and background styles, enhance product descriptions, and improve z-index for header elements to ensure proper layering.

--- a/about.html
+++ b/about.html
@@ -431,14 +431,8 @@
 				<div class="container">
 					<div class="header-row">
 
-						<!-- Logo
-						============================================= -->
-						<div id="logo">
-							<a href="index.html" class="standard-logo" data-sticky-logo="images/logo/3adurian-logo.png"><img
-									src="images/logo/3adurian-logo.png" alt="3Adurian Logo"></a>
-							<a href="index.html" class="retina-logo" data-sticky-logo="images/logo/3adurian-logo.png"><img
-									src="images/logo/3adurian-logo.png" alt="3Adurian Logo"></a>
-						</div><!-- #logo end -->
+						<!-- Logo -->
+						<div id="logo"></div><!-- #logo end -->
 
 						<div class="header-misc">
 							<div class="language-switcher">
@@ -504,8 +498,8 @@
 		<section id="content">
 			<div class="content-wrap pt-0 pb-0">
 
-				<section id="page-title" class="page-title-center d-flex align-items-center vh-40"
-					style="background-image: linear-gradient(#05309750 , #05319750), url('images/contact-banner.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center center;">
+				<section id="page-title" class="page-title-center d-flex align-items-center vh-30"
+					style="background-image: linear-gradient(135deg, #7CB342 0%, #A5D6A7 50%, #C5E1A5 100%), url('images/contact-banner.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center center;">
 					<div class="container clearfix">
 						<h1 class="ls0 nott text-white" data-translate="about.title">About Us</h1>
 					</div>
