--- a/contact.html
+++ b/contact.html
@@ -288,14 +288,8 @@
 				<div class="container">
 					<div class="header-row">
 
-						<!-- Logo
-						============================================= -->
-						<div id="logo">
-							<a href="index.html" class="standard-logo" data-sticky-logo="images/logo/3adurian-logo.png"><img
-									src="images/logo/3adurian-logo.png" alt="3Adurian Logo"></a>
-							<a href="index.html" class="retina-logo" data-sticky-logo="images/logo/3adurian-logo.png"><img
-									src="images/logo/3adurian-logo.png" alt="3Adurian Logo"></a>
-						</div><!-- #logo end -->
+						<!-- Logo -->
+						<div id="logo"></div><!-- #logo end -->
 
 						<div class="header-misc">
 							<div class="language-switcher">
@@ -361,8 +355,8 @@
 		<section id="content">
 			<div class="content-wrap pt-0 pb-0">
 
-				<section id="page-title" class="page-title-center d-flex align-items-center vh-50"
-					style="background-image: linear-gradient(#05309750 , #05319750), url('images/contact-banner.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center center;">
+				<section id="page-title" class="page-title-center d-flex align-items-center vh-30"
+					style="background-image: linear-gradient(135deg, #FFB74D 0%, #FF8A65 50%, #E91E63 100%), url('images/contact-banner.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center center;">
 					<div class="container clearfix">
 						<h1 class="display-4 ls0 nott text-white" data-translate="contact.title">Contact Us</h1>
 					</div>
@@ -379,6 +373,7 @@
 							<p><strong data-translate="contact.email">Email:</strong> <a href="mailto:3adurian2025@gmail.com" style="color: #F4D03F">3adurian2025@gmail.com</a></p>
 							<p><strong data-translate="contact.phone">Phone:</strong> <a href="tel:+60197344930" style="color: #7CB342">+6019 734 4930</a></p>
 							<p><strong>WhatsApp:</strong> <a href="https://wa.me/60197344930" target="_blank" style="color: #7CB342">+6019 734 4930</a></p>
+							<p><strong>Facebook:</strong> <a href="https://www.facebook.com/profile.php?id=61580287135165" target="_blank" style="color: #F4D03F"><i class="fab fa-facebook-f"></i> 3A Durian</a></p>
 							<p class="mt-4"><strong data-translate="contact.location">Location:</strong><br>Spx Bercham Hub</p>
 						</div>
 						<div class="col-md-5">
@@ -406,7 +401,18 @@
 					<div class="row justify-content-center">
 						<div class="col-12 col-lg-8 text-center">
 							<p class="mb-2 text-white" data-translate="footer.rights">© 2026 3Adurian. All Rights Reserved.</p>
-							<p class="mb-2 text-white"><span data-translate="footer.website">Website</span>: <a href="https://3adurian.com" target="_blank" style="color: yellow;">3adurian.com</a> | <span data-translate="footer.email">Email</span>: <a href="mailto:3adurian2025@gmail.com" style="color: yellow;">3adurian2025@gmail.com</a></p>
+							<p class="mb-2 text-white">
+								<span data-translate="footer.website">Website</span>:
+								<a href="https://3adurian.com" target="_blank" style="color: yellow;">3adurian.com</a>
+								|
+								<span data-translate="footer.email">Email</span>:
+								<a href="mailto:3adurian2025@gmail.com" style="color: yellow;">3adurian2025@gmail.com</a>
+								|
+								<span>Facebook</span>:
+								<a href="https://www.facebook.com/profile.php?id=61580287135165" target="_blank" style="color: yellow;">
+									<i class="fab fa-facebook-f"></i> 3A Durian
+								</a>
+							</p>
 						</div>
 					</div>
 
